//
// CONFIDENTIAL - FORD MOTOR COMPANY
//
// This is an unpublished work, which is a trade secret, created in
// 2018.  Ford Motor Company owns all rights to this work and intends
// to maintain it in confidence to preserve its trade secret status.
// Ford Motor Company reserves the right to protect this work as an
// unpublished copyrighted work in the event of an inadvertent or
// deliberate unauthorized publication.  Ford Motor Company also
// reserves its rights under the copyright laws to protect this work
// as a published work.  Those having access to this work may not copy
// it, use it, or disclose the information contained in it without
// the written authorization of Ford Motor Company.

syntax = "proto2";

package fnv.AudioTimer;

message __ApiVersion
{
   enum Ver
   {
       option allow_alias = true;
       major = 1;
       minor = 0;
       file_update = 0;
   }
}

/** * @fnv_proto * Protobuf to be used to send a Timer event to AudioService itself 
* @fnv_topic SERVICES/REQUEST/SYNCAPPS/AUDIOSERVICE 
* @fnv_command N/A * @fnv_scope FNV2 
* @fnv_api_source  INTERNAL 
* @fnv_message_version 1.0 */

message TimerEventMessage 
{    
	optional uint32 command = 1;
	optional __ApiVersion __api_version = 2;
}
